# morph-sample-apps

./: .gitignore  README.md  pyproject.toml
browser_use_e2e_test_app/: pyproject.toml
crewai_app/: package-lock.json  pyproject.toml
rbac_langchain_app/: Dockerfile  README.md  package-lock.json  pyproject.toml  requirements.txt
rbac_langchain_app/src/pages/: index.mdx
rbac_langchain_app/src/python/: rbac_langchain.py
sql_agent_app/: .mock_user_context.json  README.md  morph_project.yml  package-lock.json  pyproject.toml
sql_agent_app/src/pages/: index.mdx
sql_agent_app/src/python/: sql_agent.py
sql_agent_app/src/sql/: example_data.sql
src/pages/: index.mdx
src/pages/rbac_langchain_app/: index.mdx
src/python/rbac_langchain_app/: rbac_langchain.py
src/sql/: example_data.sql
